workspace-sf/force-app/main/default/objects/CartaoCredito__c/CartaoCredito__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as informações de cartão de crédito</description>
    <label>Cartão de crédito</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cartões de crédito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>