workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/Bandeira__c.field-meta.xml
<CustomField>
    <fullName>Bandeira__c</fullName>
    <label>Bandeira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
                <default>true</default>
                <label>Amex</label>
            </value>
            <value>
                <fullName>Dinersclub</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Elo</fullName>
            </value>
            <value>
                <fullName>Jcb</fullName>
            </value>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Não identificado</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Visaelectron</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Hipercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>