workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/CartoPortoSeguro__c.field-meta.xml
<CustomField>
    <fullName>CartoPortoSeguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cartão Porto Seguro?</label>
    <type>Checkbox</type>
</CustomField>