workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/CodigoSeguranca__c.field-meta.xml
<CustomField>
    <fullName>CodigoSeguranca__c</fullName>
    <label>Código de segurança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>