workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cartões de crédito</relationshipLabel>
    <relationshipName>CartoesCredito</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>