workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo foi criado para ser utilizado na chamada do serviço &quot;composite gerar proposta&quot; que ira passar este parametro como true e não deve ser executada nenhum metodo proviniente dos eventos de trigger. (CartaoCreditoTriggerHandler) - AV-837</description>
    <label>Hub</label>
    <type>Checkbox</type>
</CustomField>