workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <label>Mensagem Integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>