workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/NomeTitular__c.field-meta.xml
<CustomField>
    <fullName>NomeTitular__c</fullName>
    <label>Nome do titular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>