workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/NumeroCartao__c.field-meta.xml
<CustomField>
    <fullName>NumeroCartao__c</fullName>
    <label>Número do cartão</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>