workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Não Integrado&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
            <value>
                <fullName>Não Integrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>