workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/StatusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracao__c</fullName>
    <formula>IF(ISBLANK(VencimentoCriptografado__c),&apos;Incompleta, verifique Mensagem&apos;,&apos;Sucesso!&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Integração</label>
    <type>Text</type>
</CustomField>