workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Vencimento__c</fullName>
    <inlineHelpText>mm/aaaa</inlineHelpText>
    <label>Vencimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>