workspace-sf/force-app/main/default/objects/CartaoCredito__c/fields/VencimentoCriptografado__c.field-meta.xml
<CustomField>
    <fullName>VencimentoCriptografado__c</fullName>
    <label>Vencimento Criptografado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>