workspace-sf/force-app/main/default/objects/CartaoCredito__c/validationRules/RV_FormatoVencimento.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_FormatoVencimento</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				NOT(IsBlank(Vencimento__c)),
				NOT(REGEX(Vencimento__c, &quot;[0-9-]{19}&quot;)),
				NOT(REGEX(Vencimento__c ,&quot;^((0[1-9])|(1[0-2]))/[0-9]{4}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Vencimento__c</errorDisplayField>
    <errorMessage>Vencimento do cartão não pode estar vazio ou o formato está diferente do aceito: MM/AAAA</errorMessage>
</ValidationRule>